--- a/example/android/gradle.properties
+++ b/example/android/gradle.properties
@@ -15,6 +15,8 @@
 #Wed Sep 19 16:44:40 CST 2018
 #systemProp.http.proxyHost=127.0.0.1
 #systemProp.https.proxyPort=1086
+android.enableJetifier=true
+android.useAndroidX=true
 org.gradle.jvmargs=-Xmx1536M
 #systemProp.https.proxyHost=127.0.0.1
 #systemProp.http.proxyPort=1086
